# icfpc-2018

./: .dir-locals.el  .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  make-submission.sh
rust/: .gitignore  Makefile
rust/basic-optimizer/: Cargo.toml
rust/basic-optimizer/src/: main.rs
rust/gfx_debug_draw/src/: line_renderer.rs
rust/harmonics-optimizer/: Cargo.toml
rust/harmonics-optimizer/src/: main.rs  optimizer.rs
rust/icfpc2018_lib/: Cargo.toml
rust/icfpc2018_lib/src/: cmd.rs  coord.rs  junk.rs  kd.rs  lib.rs  model.rs  octree.rs  router.rs  state.rs
rust/icfpc2018_run/: Cargo.toml
rust/icfpc2018_vis/: Cargo.toml
rust/icfpc2018_vis/src/: main.rs  voxel.rs
rust/layer-checker/: Cargo.toml
rust/random_swarm/: .gitignore  Cargo.toml
rust/reassembler/: Cargo.toml
rust/scorer/: Cargo.toml
rust/trace-gravitizer/: Cargo.toml
rust/trace_assembler/: .gitignore  Cargo.toml
tools/: gravitizer-fa.sh  gravitizer-fd.sh  gravitizer-fr.sh  score-fa.sh  score-fd.sh  score-fr.sh  validate-fa.sh  validate-fd.sh  validate-fr.sh
trace_maker/: run_fa  run_fd  run_fr
traces/: FA001.nbt  FA002.nbt  FA003.nbt  FA004.nbt  FA005.nbt  FA006.nbt  FA007.nbt  FA008.nbt  FA009.nbt  FA010.nbt  FA011.nbt  FA012.nbt  FA013.nbt  FA014.nbt  FA015.nbt  FA016.nbt  FA017.nbt  FA018.nbt  FA019.nbt  FA020.nbt  FA021.nbt  FA022.nbt  FA023.nbt  FA024.nbt  FA025.nbt  FA026.nbt  FA027.nbt  FA028.nbt  FA029.nbt  FA030.nbt  FA031.nbt  FA032.nbt  FA033.nbt  FA034.nbt  FA035.nbt  FA036.nbt  FA037.nbt  FA038.nbt  FA039.nbt  FA040.nbt  (+613 more)
(+467 files in other folders)
