[package]
name = "icfpc2018_vis"
version = "0.2.1"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
icfpc2018_lib = { path = "../icfpc2018_lib" }
log = "0.4"
clap = "2.32"
gfx_core = "0.8"
env_logger = "0.5"
piston_window = "0.80"
gfx_text = "0.22"
gfx_debug_draw = "0.21"
vecmath = "0.3"
camera_controllers = "0.24"
